--- a/app/src/main/res/layout/activity_edit_promotion_activityz.xml
+++ b/app/src/main/res/layout/activity_edit_promotion_activityz.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kasembhundit.kutthareeya.thiti.manageres.editPromotionActivity">
+    tools:context="kasembhundit.kutthareeya.thiti.manageres.EditPromotionActivityz">
 
     <!--Layout on top-->
     <RelativeLayout
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="แก้ไขข่าวสาร"
+            android:text="แก้ไขโปรโมชั่น"
             android:textColor="@color/textcolorPrimary"
             android:textSize="@dimen/h1"
             android:textStyle="bold" />
