--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -119,15 +119,31 @@
                     android:layout_width="@dimen/dp100"
                     android:layout_height="@dimen/dp100" />
 
-                <TextView
-                    android:id="@+id/txtTotalPrice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp25"
-                    android:text="ราคา: 100฿"
-                    android:textColor="@color/colorSecondary"
-                    android:textSize="@dimen/h1"
-                    android:textStyle="bold" />
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/txtTotalPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/dp25"
+                        android:text="ราคา: 100฿"
+                        android:textColor="@color/colorSecondary"
+                        android:textSize="@dimen/h1"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txtPromotion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="18dp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="@dimen/h1"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
             <!--Topping-->
