--- a/app/src/main/res/layout/activity_show_notification.xml
+++ b/app/src/main/res/layout/activity_show_notification.xml
@@ -37,7 +37,7 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/imvorder"
+            android:id="@+id/imvOrder"
             android:layout_width="200dp"
             android:layout_height="170dp"
             android:padding="@dimen/dp25"
