--- a/app/src/main/res/layout/new_listview.xml
+++ b/app/src/main/res/layout/new_listview.xml
@@ -10,6 +10,7 @@
         android:layout_height="140dp"/>
 
     <LinearLayout
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
