--- a/app/src/main/res/layout/activity_edit_promotion_manage.xml
+++ b/app/src/main/res/layout/activity_edit_promotion_manage.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="แก้ไขรายการอาหาร"
+            android:text="แก้ไขโปรโมชั่น"
             android:textColor="@color/textcolorPrimary"
             android:textSize="28dp"
             android:textStyle="bold" />
