--- a/app/src/main/res/layout/activity_merchant_main.xml
+++ b/app/src/main/res/layout/activity_merchant_main.xml
@@ -15,16 +15,17 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
-        <!--back-->
         <ImageView
-            android:layout_weight="1"
-            android:id="@+id/imvBack"
+            android:id="@+id/imvManage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_back" />
+            android:layout_gravity="right"
+            android:layout_weight="0.5"
+            android:src="@drawable/edit" />
 
         <!--Title-->
         <TextView
+            android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:id="@+id/textHeader"
             android:layout_width="wrap_content"
@@ -35,12 +36,14 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/imvManage"
+            android:id="@+id/imvRefresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:src="@drawable/edit" />
+
+
 
     </LinearLayout>
 
