--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -23,11 +23,11 @@
 
         <TextView
             android:id="@+id/txtTitle"
-            android:textSize="@dimen/h2"
+            android:textSize="@dimen/h1"
             android:textStyle="bold"
             android:textColor="@color/textcolorPrimary"
             android:layout_centerInParent="true"
-            android:text="@string/title"
+            android:text="ข่าวสาร"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RelativeLayout>
