--- a/app/src/main/res/layout/activity_my_calendar_view.xml
+++ b/app/src/main/res/layout/activity_my_calendar_view.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kasembhundit.kutthareeya.thiti.manageres.DeleteFoodtActivity">
+    tools:context="kasembhundit.kutthareeya.thiti.manageres.MyCalendarView">
 
-    <!--Layout on top-->
+    <!--Top-->
     <RelativeLayout
-        android:id="@+id/realTop"
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -18,25 +18,24 @@
             android:id="@+id/imvBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_back" />
+            android:src="@mipmap/ic_back"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
-            android:id="@+id/manage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="ลบรายการอาหาร"
+            android:text="เลือกวันที่"
             android:textColor="@color/textcolorPrimary"
-            android:textSize="@dimen/h1"
+            android:textSize="@dimen/txtH1"
             android:textStyle="bold" />
-
-
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/livDelFood"
+    <CalendarView
+        android:layout_below="@id/relativeLayout"
+        android:id="@+id/calendarView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/realTop"></ListView>
+        android:layout_height="match_parent"></CalendarView>
 
 </RelativeLayout>
