--- a/app/src/main/res/layout/activity_hub.xml
+++ b/app/src/main/res/layout/activity_hub.xml
@@ -76,7 +76,7 @@
             android:src="@drawable/favorite" />
 
         <ImageView
-            android:id="@+id/imvPack"
+            android:id="@+id/imvPromotion"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -111,6 +111,13 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imvPack"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/foodsingle" />
 
         <ImageView
             android:id="@+id/imvFoodAll"
