--- a/app/src/main/res/layout/order_listviewmer_layout.xml
+++ b/app/src/main/res/layout/order_listviewmer_layout.xml
@@ -20,16 +20,32 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <!--Ref-->
-            <TextView
-                android:id="@+id/txtRef"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="@dimen/dp10"
-                android:text="Ref.01"
-                android:textSize="@dimen/h1"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <!--Ref-->
+                <TextView
+                    android:layout_weight="1"
+                    android:id="@+id/txtRef"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:text="Ref.01"
+                    android:textSize="18dp" />
+
+                <!--Time-->
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:id="@+id/txtDelivery"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:text="จัดส่ง: จัดส่งที่ห้อง"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:orientation="vertical"
@@ -38,7 +54,7 @@
 
                 <!--Name Order-->
                 <TextView
-                    android:layout_weight="0.1"
+                    android:layout_weight="1"
                     android:id="@+id/txtNameSur"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -48,7 +64,7 @@
                 <!--Time-->
                 <TextView
                     android:layout_marginTop="5dp"
-                    android:layout_weight="0.1"
+                    android:layout_weight="1"
                     android:id="@+id/txtTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -123,7 +139,7 @@
             android:layout_gravity="right"
             android:layout_marginRight="20dp"
             android:text="ราคา 100 บาท"
-            android:textSize="@dimen/h1"
+            android:textSize="25dp"
             android:textStyle="bold" />
 
     </LinearLayout>
