--- a/app/src/main/res/layout/activity_edit_promotion_activityz.xml
+++ b/app/src/main/res/layout/activity_edit_promotion_activityz.xml
@@ -38,7 +38,7 @@
             android:id="@+id/imvRefresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/edit" />
+            android:src="@drawable/imv_refresh" />
 
 
     </LinearLayout>
