--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -81,7 +81,7 @@
                 android:id="@+id/imvLastOrder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/addproduct" />
+                android:src="@drawable/imv_new" />
 
             <TextView
                 android:id="@+id/txtLastOrder"
@@ -105,7 +105,7 @@
                 android:id="@+id/imvOrder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/addnews" />
+                android:src="@drawable/imv_history" />
 
             <TextView
                 android:id="@+id/txtOrder"
