--- a/app/src/main/res/layout/activity_add_promotion.xml
+++ b/app/src/main/res/layout/activity_add_promotion.xml
@@ -49,7 +49,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:src="@drawable/addproduct" />
+            android:src="@drawable/imv_addpicfood" />
 
         <!--Title New-->
         <EditText
