--- a/app/src/main/res/layout/activity_edit_news.xml
+++ b/app/src/main/res/layout/activity_edit_news.xml
@@ -47,7 +47,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:src="@drawable/addproduct" />
+            android:src="@drawable/imv_addpicfood" />
 
         <!--Name-->
         <EditText
