--- a/app/src/main/res/layout/activity_edit_news_list.xml
+++ b/app/src/main/res/layout/activity_edit_news_list.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.04"
-            android:src="@drawable/edit" />
+            android:src="@drawable/imv_refresh" />
 
     </LinearLayout>
 
