--- a/app/src/main/res/layout/activity_merchant_main.xml
+++ b/app/src/main/res/layout/activity_merchant_main.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_weight="0.5"
-            android:src="@drawable/edit" />
+            android:src="@drawable/imv_setting" />
 
         <!--Title-->
         <TextView
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_weight="0.5"
-            android:src="@drawable/edit" />
+            android:src="@drawable/imv_refresh" />
 
 
 
